# src/controller/authentication/authenticationcontroller.go
@@ -1,7 +1,7 @@
 package authenticationcontroller
 
 import (
-	loginmodel "cashapi/src/model/login"
+	"cashapi/src/model"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -13,12 +13,12 @@ import (
 // @ID connect-token
 // @Accept json
 // @Produce json
-// @Param body body loginmodel.LoginRequest true "LoginRequest"
-// @Success 200 {object} loginmodel.LoginResponse
+// @Param body body model.LoginRequest true "LoginRequest"
+// @Success 200 {object} model.LoginResponse
 // @Header 200 {string} Token "qwerty"
 // @Router /connect/token [post]
 func Authenticate(c *gin.Context) {
-	var loginRequest loginmodel.LoginRequest
+	var loginRequest model.LoginRequest
 	if err := c.ShouldBindJSON(&loginRequest); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
