# src/main.go
@@ -5,9 +5,9 @@ import (
 
 	"github.com/gin-gonic/gin"
 
-	"cashapi/src/controller/authentication"
-	"cashapi/src/controller/user"
-	"cashapi/src/controller/payment"
+	authenticationcontroller "cashapi/src/controller/authentication"
+	paymentcontroller "cashapi/src/controller/payment"
+	usercontroller "cashapi/src/controller/user"
 
 	"github.com/labstack/echo"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -41,10 +41,13 @@ func main() {
 
 	r.GET("/swagger/*any", ginSwagger.CustomWrapHandler(config, swaggerFiles.Handler))
 
-	r.POST("/connect/token", authenticationcontroller.Authenticate)
+	r.POST("/connect/token", func(c *gin.Context) {
+		authenticationcontroller.Authenticate(c)
+	})
 
 	r.POST("/payment/create", paymentcontroller.Create)
 	r.POST("/user/create", usercontroller.Create)
+	r.GET("/user/groups", usercontroller.Groups)
 
 	r.Run(":8080")
 
