# src/model/payment/paymentmodel.go
@@ -1,18 +1,0 @@
-package paymentmodel
-
-import (
-	"encoding/json"
-
-	uuid "github.com/satori/go.uuid"
-)
-
-type PaymentModel struct {
-	ID   int       `json:"id" example:"1" format:"int64"`
-	Name string    `json:"name" example:"account name"`
-	UUID uuid.UUID `json:"uuid" example:"550e8400-e29b-41d4-a716-446655440000" format:"uuid"`
-}
-
-func (model *PaymentModel) ToJSON() string {
-	by, _ := json.Marshal(model)
-	return string(by)
-}
